--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -98,6 +98,12 @@
 .search-button-icon {
     .btn-icon("\f002");
 }
+.plus-button-icon {
+    .btn-icon("\f067");
+}
+.minus-button-icon {
+    .btn-icon("\f068");
+}
 // Actions
 .email-button-icon {
     .btn-icon("\f003");
