--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -131,6 +131,13 @@
     .callout--border--left;
 }
 
+.well {
+    .callout(
+        rgba(0,0,0,.05)
+    );
+    border-radius: @form-border-radius;
+}
+
 /************************************************************************
  * Side panels - extending to style the panels that will run down the left-hand menu.
  */
