--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2334,6 +2334,22 @@ ul li {
   padding: 0px 8px;
   padding: 0rem 0.5rem;
 }
+.example-box-full {
+  color: #333;
+  padding: 16px;
+  padding: 1rem;
+  font-family: monaco,monospace;
+  line-height: 1.7em;
+  background-color: #f8f8f8;
+  border: 1px solid #dfe1e3;
+  border-radius: 2px;
+  overflow: hidden;
+}
+.example-box-full code {
+  color: #9f9f9f;
+  padding: 0px 8px;
+  padding: 0rem 0.5rem;
+}
 .example-box-plain {
   color: #333;
   padding: 20px;
@@ -2372,6 +2388,12 @@ span.code {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .customcol13 {
+    width: calc(33.33333333% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .customcol13 {
   width: 31.33333333% !important;
   margin-right: 2% !important;
@@ -2403,6 +2425,12 @@ span.code {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .customcol49 {
+    width: calc(44.44444444% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .customcol49 {
   width: 42.44444444% !important;
   margin-right: 2% !important;
@@ -2432,6 +2460,12 @@ span.code {
     width: calc(22.22222222% - 2rem);
     margin-right: 2rem;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 600px) and (max-width: 840px) {
+  .customcol29 {
+    width: calc(22.22222222% - 1rem);
+    margin-right: 1rem;
   }
 }
 .ie8 .customcol29 {
@@ -6751,6 +6785,11 @@ hr {
     overflow: hidden;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .row {
+    margin: 0 -1rem 1rem 0;
+  }
+}
 .ie8 .row {
   margin: 0 -2% 2% 0 !important;
   clear: both !important;
@@ -6767,6 +6806,12 @@ hr {
     width: calc(100% - 2rem);
     margin-right: 2rem;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 600px) and (max-width: 840px) {
+  .span12 {
+    width: calc(100% - 1rem);
+    margin-right: 1rem;
   }
 }
 .ie8 .span12 {
@@ -6800,6 +6845,12 @@ hr {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .span11 {
+    width: calc(91.66666667% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .span11 {
   width: 89.66666667% !important;
   margin-right: 2% !important;
@@ -6829,6 +6880,12 @@ hr {
     width: calc(83.33333333% - 2rem);
     margin-right: 2rem;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 600px) and (max-width: 840px) {
+  .span10 {
+    width: calc(83.33333333% - 1rem);
+    margin-right: 1rem;
   }
 }
 .ie8 .span10 {
@@ -6862,6 +6919,12 @@ hr {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .span9 {
+    width: calc(75% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .span9 {
   width: 73% !important;
   margin-right: 2% !important;
@@ -6891,6 +6954,12 @@ hr {
     width: calc(66.66666667% - 2rem);
     margin-right: 2rem;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 600px) and (max-width: 840px) {
+  .span8 {
+    width: calc(66.66666667% - 1rem);
+    margin-right: 1rem;
   }
 }
 .ie8 .span8 {
@@ -6924,6 +6993,12 @@ hr {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .span7 {
+    width: calc(58.33333333% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .span7 {
   width: 56.33333333% !important;
   margin-right: 2% !important;
@@ -6953,6 +7028,12 @@ hr {
     width: calc(50% - 2rem);
     margin-right: 2rem;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 600px) and (max-width: 840px) {
+  .span6 {
+    width: calc(50% - 1rem);
+    margin-right: 1rem;
   }
 }
 .ie8 .span6 {
@@ -6986,6 +7067,12 @@ hr {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .span5 {
+    width: calc(41.66666667% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .span5 {
   width: 39.66666667% !important;
   margin-right: 2% !important;
@@ -7015,6 +7102,12 @@ hr {
     width: calc(33.33333333% - 2rem);
     margin-right: 2rem;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 600px) and (max-width: 840px) {
+  .span4 {
+    width: calc(33.33333333% - 1rem);
+    margin-right: 1rem;
   }
 }
 .ie8 .span4 {
@@ -7048,6 +7141,12 @@ hr {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .span3 {
+    width: calc(25% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .span3 {
   width: 23% !important;
   margin-right: 2% !important;
@@ -7079,6 +7178,12 @@ hr {
     margin-bottom: 0;
   }
 }
+@media (min-width: 600px) and (max-width: 840px) {
+  .span2 {
+    width: calc(16.66666667% - 1rem);
+    margin-right: 1rem;
+  }
+}
 .ie8 .span2 {
   width: 14.66666667% !important;
   margin-right: 2% !important;
@@ -7108,6 +7213,12 @@ hr {
     width: calc(8.33333333% - 2rem);
     margin-right: 2rem;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 600px) and (max-width: 840px) {
+  .span1 {
+    width: calc(8.33333333% - 1rem);
+    margin-right: 1rem;
   }
 }
 .ie8 .span1 {
@@ -13153,4 +13264,3 @@ span[id*="overlay_button"] {
     padding-left: 1em;
   }
 }
-/*# sourceMappingURL=site.css.map */
